@@ -7,6 +7,7 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2018-04-29] RFC4880: added TMCG_OpenPGP_SecretSubKey, TMCG_OpenPGP_Seckey
 * [2018-04-25] RFC4880: added TMCG_OpenPGP_UserAttribute (with opaque content)
 * [2018-04-25] RFC4880: changed CertificationHash() to support user attributes
 * [2018-04-24] RFC4880: added limit TMCG_OPENPGP_MAX_ALLOC for memory allocation
